Update dockerfile git binary, cleanup helm

--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -2,7 +2,7 @@ FROM alpine:latest
 
 ARG KIND_VERSION=0.14.0
 
-RUN apk add --no-cache curl docker-cli openssl 
+RUN apk add --no-cache curl docker-cli openssl git 
 
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
 RUN chmod +x ./kubectl
@@ -12,5 +12,4 @@ RUN curl -L https://github.com/kubernetes-sigs/kind/releases/download/v${KIND_VE
     chmod +x /usr/local/bin/kind
 
 RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-RUN chmod 700 get_helm.sh
-RUN sh ./get_helm.sh 
+RUN chmod 700 get_helm.sh; sh ./get_helm.sh ; rm get_helm
