--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -12,4 +12,4 @@ RUN curl -L https://github.com/kubernetes-sigs/kind/releases/download/v${KIND_VE
     chmod +x /usr/local/bin/kind
 
 RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-RUN chmod 700 get_helm.sh; sh ./get_helm.sh ; rm get_helm
+RUN chmod 700 get_helm.sh; sh ./get_helm.sh ; rm get_helm.sh
