--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.162.0/containers/javascript-node
 {
-    "name": "kubernetes-tutorial-basic",
+    "name": "kubernetes-prom-test",
     "build": {
       "dockerfile": "dockerfile",
-      "args": { "KIND_VERSION": "0.14.0" }
+      "args": { "KIND_VERSION": "0.20.0" }
     },
     "mounts": ["type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock"],
   
