--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,7 @@
 {
     "name": "kubernetes-prom-test",
     "build": {
-      "dockerfile": "dockerfile",
-      "args": { "KIND_VERSION": "0.20.0" }
+      "dockerfile": "dockerfile"
     },
     "mounts": ["type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock"],
   
